gts-macros/tests/compile_fail/enum_not_supported.stderr
error: struct_to_gts_schema: Only structs are supported
  --> tests/compile_fail/enum_not_supported.rs:12:10
   |
12 | pub enum Status {
   |          ^^^^^^
